src/objects/BMCServiceDesk__Problem_CI_Link__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between problems and configuration items.</description>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <description>This field stores the class name of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Configuration_Item__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?id=1010&amp;cmdbRecordId=&quot;+  BMCServiceDesk__FKConfiguration_Item__r.Id ,  BMCServiceDesk__FKConfiguration_Item__r.Name , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Item / Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
        <description>This field stores the foreign key value of the linked configuration item</description>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Problem CI Links</relationshipLabel>
        <relationshipName>Problem_CI_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem__c</fullName>
        <description>This field stores the foreign key value of the linked problem</description>
        <label>Problem</label>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>Linked Services, Configuration Items and Assets</relationshipLabel>
        <relationshipName>Problem_CI_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_ID__c</fullName>
        <description>This field stores the instance id of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Name__c</fullName>
        <description>This field stores the instance name of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__Name__c</formula>
        <label>Instance Name</label>
        <type>Text</type>
    </fields>
    <label>Problem CI Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Problem CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>